// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckoutDetails /> when payment initialized on form complete should render canceled content 1`] = `
<div
  className="css-z4bb15"
>
  <h2
    className="css-84al3w"
  >
    Payment Cancelled
  </h2>
  <p
    className="css-441ftm"
  >
    Successfuly cancelled intent:
     
    <span
      className="css-4i139l"
    >
      id
    </span>
  </p>
</div>
`;

exports[`<CheckoutDetails /> when payment initialized on form complete should render error content 1`] = `
<div
  className="css-z4bb15"
>
  <p
    className="css-1po2p9s"
  >
    <strong>
      Error:
    </strong>
    <br />
    <em />
  </p>
  <button
    className="css-1729dnv"
    data-cy="button"
    href="#0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    retry
  </button>
</div>
`;

exports[`<CheckoutDetails /> when payment initialized on form complete should render success content 1`] = `
<div
  className="css-z4bb15"
>
  <h2
    className="css-84al3w"
  >
    Payment Successful
  </h2>
  <p
    className="css-441ftm"
  >
    Received intent number:
     
    <span
      className="css-4i139l"
    >
      id
    </span>
  </p>
  <p
    className="css-18poma1"
  >
    This was a sample transaction to demonstrate the payment flow. Thank you!
  </p>
</div>
`;

exports[`<CheckoutDetails /> when payment initialized should render without props 1`] = `
<div
  className="css-z4bb15"
>
  <form
    className="css-1mi3tt8"
  >
    <fieldset
      className="css-94sf3x"
    >
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="name"
        >
          name
        </label>
        <input
          autoComplete="name"
          className="css-cth1sm"
          id="name"
          onChange={[Function]}
          placeholder="Jane Doe"
          required={true}
          type="text"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="address"
        >
          address
        </label>
        <input
          autoComplete="address"
          className="css-cth1sm"
          id="address"
          onChange={[Function]}
          placeholder="J191 S. Illinois Street, Everett, MA 02149"
          required={true}
          type="text"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="email"
        >
          email
        </label>
        <input
          autoComplete="email"
          className="css-cth1sm"
          id="email"
          onChange={[Function]}
          placeholder="janedoe@gmail.com"
          required={true}
          type="email"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="phone"
        >
          phone
        </label>
        <input
          autoComplete="tel"
          className="css-cth1sm"
          id="phone"
          onChange={[Function]}
          placeholder="(941) 555-0123"
          required={true}
          type="tel"
          value=""
        />
      </fieldset>
      <div
        className="css-70qvj9"
      >
        <label
          className="css-1gjn3mk"
          htmlFor="StripeElement"
        >
          card
        </label>
        <p
          className="css-1i3anel"
        >
          Use any date and CVC with 
          <strong>
            4242 4242 4242 4242
          </strong>
           
          number for testing
        </p>
        <p
          className="css-cz9gy2"
        />
      </div>
      CardElement
    </fieldset>
    <p
      className="css-1ebbm78"
    >
      By clicking the
       
      <span
        className="css-1yhuerr"
      >
        PAY
      </span>
       
      button you will accept the
       
      <a
        className="css-1c5zfe9"
      >
        Terms of Service
      </a>
       
      of the company.
    </p>
    <button
      className="css-2jdihq"
      data-cy="button"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      BACK TO REVIEW
    </button>
    <button
      className="css-u7u20l"
      data-cy="button"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <span
        className="css-1d22953"
      >
        FILL THE FORM
      </span>
    </button>
  </form>
</div>
`;

exports[`<CheckoutDetails /> when payment not initialized should render without props 1`] = `
<div
  className="css-z4bb15"
>
  <form
    className="css-1mi3tt8"
  >
    <fieldset
      className="css-94sf3x"
    >
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="name"
        >
          name
        </label>
        <input
          autoComplete="name"
          className="css-cth1sm"
          id="name"
          onChange={[Function]}
          placeholder="Jane Doe"
          required={true}
          type="text"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="address"
        >
          address
        </label>
        <input
          autoComplete="address"
          className="css-cth1sm"
          id="address"
          onChange={[Function]}
          placeholder="J191 S. Illinois Street, Everett, MA 02149"
          required={true}
          type="text"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="email"
        >
          email
        </label>
        <input
          autoComplete="email"
          className="css-cth1sm"
          id="email"
          onChange={[Function]}
          placeholder="janedoe@gmail.com"
          required={true}
          type="email"
          value=""
        />
      </fieldset>
      <fieldset
        className="css-9x3bhi"
      >
        <label
          className="css-1xnp38i"
          htmlFor="phone"
        >
          phone
        </label>
        <input
          autoComplete="tel"
          className="css-cth1sm"
          id="phone"
          onChange={[Function]}
          placeholder="(941) 555-0123"
          required={true}
          type="tel"
          value=""
        />
      </fieldset>
      <div
        className="css-70qvj9"
      >
        <label
          className="css-1gjn3mk"
          htmlFor="StripeElement"
        >
          card
        </label>
        <p
          className="css-1i3anel"
        >
          Use any date and CVC with 
          <strong>
            4242 4242 4242 4242
          </strong>
           
          number for testing
        </p>
        <p
          className="css-cz9gy2"
        />
      </div>
      CardElement
    </fieldset>
    <p
      className="css-1ebbm78"
    >
      By clicking the
       
      <span
        className="css-1yhuerr"
      >
        PAY
      </span>
       
      button you will accept the
       
      <a
        className="css-1c5zfe9"
      >
        Terms of Service
      </a>
       
      of the company.
    </p>
    <button
      className="css-2jdihq"
      data-cy="button"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      BACK TO REVIEW
    </button>
    <button
      className="css-u7u20l"
      data-cy="button"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <span
        className="css-1d22953"
      >
        FILL THE FORM
      </span>
    </button>
  </form>
</div>
`;
